Fix Transitions Jumping

--- a/src/Components/card/Card.module.css
+++ b/src/Components/card/Card.module.css
@@ -3,8 +3,6 @@
     background-color: white;
     margin: 0px;
     border-radius: 12px;
-    /* border: solid white;
-    border-width: 2px; */
     flex-grow: 1;
 }
 
